--- a/.settings/gradle/org.springsource.ide.eclipse.gradle.core.import.prefs
+++ b/.settings/gradle/org.springsource.ide.eclipse.gradle.core.import.prefs
@@ -1,5 +1,5 @@
 #org.springsource.ide.eclipse.gradle.core.preferences.GradleImportPreferences
-#Mon Oct 06 09:30:10 MSK 2014
+#Mon Oct 06 15:47:16 MSK 2014
 addResourceFilters=true
 afterTasks=afterEclipseImport;
 beforeTasks=cleanEclipse;eclipse;
@@ -7,4 +7,4 @@ enableAfterTasks=true
 enableBeforeTasks=true
 enableDSLD=false
 enableDependendencyManagement=true
-projects=;
+projects=
