--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,7 @@ dependencies{
 	compile 'org.hibernate:hibernate-entitymanager:4.3.6.Final'
 	compile 'mysql:mysql-connector-java:5.1.6'
 	compile 'ma.glasnost.orika:orika-core:1.4.5'
+	compile 'org.apache.cxf:cxf-rt-frontend-jaxws:3.0.1'
+	compile 'org.apache.cxf:cxf-rt-transports-http-jetty:3.0.1'
 	testCompile 'junit:junit:4.11+'
 }
